# osm2pgsql-cmake

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  build.bat  config.h.in  pgsetup.bat
cmake/: FindOSMPBF.cmake  FindOsmium.cmake
tests/: CMakeLists.txt
